ステージボタンがおかしかったので修正

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -682,6 +682,12 @@
     <ClCompile Include="src\Game\CStage1Button.cpp">
       <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\CStage3MenuObject.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\StageMenuObject</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CStage3Button.cpp">
+      <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -1240,6 +1246,12 @@
       <Filter>ソース ファイル\Game\Field\Object\StageMenuObject</Filter>
     </ClInclude>
     <ClInclude Include="src\Game\CStage1Button.h">
+      <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CStage3MenuObject.h">
+      <Filter>ソース ファイル\Game\Field\Object\StageMenuObject</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CStage3Button.h">
       <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
     </ClInclude>
   </ItemGroup>
