--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="src\Game\CStage1MenuObject.cpp" />
     <ClCompile Include="src\Game\CStage2.cpp" />
     <ClCompile Include="src\Game\CStage3.cpp" />
+    <ClCompile Include="src\Game\CStage3Button.cpp" />
+    <ClCompile Include="src\Game\CStage3MenuObject.cpp" />
     <ClCompile Include="src\Game\CStageBase.cpp" />
     <ClCompile Include="src\Game\CStageButton.cpp" />
     <ClCompile Include="src\Game\CStageManager.cpp" />
@@ -318,6 +320,8 @@
     <ClInclude Include="src\Game\CStage1MenuObject.h" />
     <ClInclude Include="src\Game\CStage2.h" />
     <ClInclude Include="src\Game\CStage3.h" />
+    <ClInclude Include="src\Game\CStage3Button.h" />
+    <ClInclude Include="src\Game\CStage3MenuObject.h" />
     <ClInclude Include="src\Game\CStageBase.h" />
     <ClInclude Include="src\Game\CStageButton.h" />
     <ClInclude Include="src\Game\CStageManager.h" />
