--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -146,6 +146,9 @@
     <Filter Include="ソース ファイル\Game\Field\Object\StageMenuObject">
       <UniqueIdentifier>{3875cf59-8261-4da2-b78f-dacb23697950}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Game\Field\Object\Obstacle\Stone">
+      <UniqueIdentifier>{0cd870da-3d3e-4c91-be6d-0152ba717c67}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -646,9 +649,6 @@
     <ClCompile Include="src\Game\CStageSelectCamera.cpp">
       <Filter>ソース ファイル\Game\Camera</Filter>
     </ClCompile>
-    <ClCompile Include="src\Game\CStone1.cpp">
-      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
-    </ClCompile>
     <ClCompile Include="src\Game\CGoalBase.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Base</Filter>
     </ClCompile>
@@ -687,6 +687,9 @@
     </ClCompile>
     <ClCompile Include="src\Game\CStage3Button.cpp">
       <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CStone1.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle\Stone</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1212,9 +1215,6 @@
     <ClInclude Include="src\Game\CStageSelectCamera.h">
       <Filter>ソース ファイル\Game\Camera</Filter>
     </ClInclude>
-    <ClInclude Include="src\Game\CStone1.h">
-      <Filter>ソース ファイル\Game\Field\Object\Obstacle</Filter>
-    </ClInclude>
     <ClInclude Include="src\Game\CGoalBase.h">
       <Filter>ソース ファイル\Game\Field\Object\Base</Filter>
     </ClInclude>
@@ -1253,6 +1253,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CStage3Button.h">
       <Filter>ソース ファイル\Game\Stage\StageButton</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CStone1.h">
+      <Filter>ソース ファイル\Game\Field\Object\Obstacle\Stone</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
