--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -691,6 +691,9 @@
     <ClCompile Include="src\Game\CStone1.cpp">
       <Filter>ソース ファイル\Game\Field\Object\Obstacle\Stone</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game\CSeesaw.cpp">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseSystem\CCollider.h">
@@ -1256,6 +1259,9 @@
     </ClInclude>
     <ClInclude Include="src\Game\CStone1.h">
       <Filter>ソース ファイル\Game\Field\Object\Obstacle\Stone</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Game\CSeesaw.h">
+      <Filter>ソース ファイル\Game\Field\Object\Gimmick</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
